--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
     <img src="img/jogarNovamente.gif" id="jogarNovamente"></img> 
     <button id="recarregar" onclick="sortear()"><i class='bx bx-refresh'></i></button> 
     <button id="jogarAutomatico" onclick="listaAutomatica()"><i class='bx bx-pause-circle'></i></button>
+    <button id="voltar"><i class='bx bxs-home-alt-2 bx-rotate-270'></i></button>
 
     <script src="index.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
